# ckb-typed-message-ecs-poc

./: Cargo.toml  Makefile  README.md  capsule.toml
contracts/always-success/src/: main.rs
contracts/ckb-typed-message-ecs-poc/: Cargo.toml
contracts/component-definition-type/: Cargo.toml
contracts/component-definition-type/src/: entry.rs  error_include.rs
contracts/component-lock/: Cargo.toml  README.md
contracts/component-lock/src/: entry.rs  error_include.rs
contracts/component-type/: Cargo.toml
contracts/component-type/src/: entry.rs  error_include.rs
crates/ckb-ecs-schemas/: Cargo.toml
crates/ckb-ecs-schemas/src/: conversion.rs  lib.rs
crates/ckb-ecs-schemas/src/schemas/: blockchain.rs  component.rs  component_definition.rs  mod.rs
schemas/: blockchain.mol  component.mol  component_definition.mol
tests/: Cargo.toml
tests/src/: component_definition_type_tests.rs  component_lock_tests.rs  component_type_tests.rs  lib.rs  tests.rs
