[workspace]
members = [
  "crates/ckb-ecs-schemas",
  "contracts/component-lock",
  "contracts/always-success",
  "contracts/component-definition-type", "contracts/component-type",
]
exclude = ["tests"]

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = false
codegen-units = 1
