[package]
name = "component-type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.14.0"
ckb-ecs-schemas = { path = "../../crates/ckb-ecs-schemas" }
base64 = { version = "0.21.5", default-features = false, features = ["alloc"] }
